Closed
Bug 563845
Opened 16 years ago
Closed 16 years ago
skip jsval-to-jsid conversion when jsval is a jsid
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: luke, Assigned: luke)
Details
(Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
|
2.08 KB,
patch
|
igor
:
review+
|
Details | Diff | Splinter Review |
This patch just tightens some assertions to simplify things for the fat-value patch.
Attachment #443531 -
Flags: review?(igor)
Comment 1•16 years ago
|
||
Comment on attachment 443531 [details] [diff] [review]
patch
An ultimate solution would to fix the the signature of the resolve hook and setters/getters so they take the id, not a value. But for now the change is very rightful.
Attachment #443531 -
Flags: review?(igor) → review+
| Assignee | ||
Comment 2•16 years ago
|
||
(In reply to comment #1)
> (From update of attachment 443531 [details] [diff] [review])
> An ultimate solution would to fix the the signature of the resolve hook and
> setters/getters so they take the id, not a value.
Happening in bug 549143 :)
| Assignee | ||
Comment 3•16 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Comment 4•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•