Bug 563845 - skip jsval-to-jsid conversion when jsval is a jsid (r=igor)